--- a/_test_templates/navigation.css
+++ b/_test_templates/navigation.css
@@ -11,7 +11,6 @@
     font-family: 'Jost', sans-serif;
 }
 body{
-    min-height: 100vh;
     background: #fff;
 }
 .navigation{
@@ -19,7 +18,7 @@ body{
     top: 20px;
     left: 20px;
     bottom: 20px;
-    width: 300px;
+    width: 70px;
     border-radius: 10px;
     box-sizing: initial;
     border-left: 5px solid var(--theme-color);
@@ -29,10 +28,9 @@ body{
     transition-duration: 0.5s;
     overflow-x: hidden;
     user-select: none;
-    /* font-size: 20px; */
 }
-#menu-toggle:checked ~ .navigation{
-    width: 70px;
+.navigation:hover{
+    width: 300px;
 }
 .navigation ul{
     position: absolute;
@@ -98,42 +96,25 @@ body{
     font-size: 34px;
     color: #fff;
 }
-#menu-toggle {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-    height: 0;
-    width: 0;
-}
-.toggle .toggle__open-btn{
-    display: none;
-}
-.toggle .toggle__close-btn{
-    display: block;
-}
-#menu-toggle:checked ~ .toggle .toggle__open-btn{
-    display: block
-}
-#menu-toggle:checked ~ .toggle .toggle__close-btn{
-    display: none;
-}
+
 .navigation::after{
-    content: "Designed by Nikita Okhotnikov";
-    color: #fff;
+    opacity: 0;
+    transition: opacity 0.2s;
+    transition-delay: 0s;
     position: absolute;
     bottom: 20px;
     left: 20px;
     white-space: nowrap;
+    content: "Designed by Nikita Okhotnikov";
+    color: #fff;
+}
+.navigation:hover::after{
     opacity: 1;
     transition: opacity 0.5s;
     transition-delay: 0.5s;
 }
 
-#menu-toggle:checked ~ .navigation::after{
-    opacity: 0;
-    transition: opacity 0.2s;
-    transition-delay: 0s;
-}
+
 .navigation ul li.active b:nth-child(1){
     position: absolute;
     top: -20px;
@@ -186,7 +167,10 @@ ion-icon{
         display: none;
     }
     .navigation{
-        overflow-y: scroll;
+        overflow-y: auto;
+        width: 70px;
+    }
+    .navigation:hover{
         width: 70px;
     }
     .navigation ul{
